--- a/styles/style.css
+++ b/styles/style.css
@@ -201,6 +201,7 @@ margin-bottom: 46px;
     width: 1600px;
     margin: 0 auto;
     text-align: center;
+    margin-bottom: 80px;
 
 } 
 .donate-box{
@@ -274,4 +275,13 @@ margin-bottom: 46px;
     color:rgba(14, 14, 14, 0.3);
     text-align: center;
     margin-bottom: 32px;
+}
+.subscribe{
+    width: 1100px;
+    height: 395px;
+    margin: 0 auto;
+    text-align: center;
+    background-color: rgba(198, 228, 214, 1);
+    border-radius: 24px;
+    padding: 80px 250px;
 }       
